<resources>
    <string name="app_name">Jugaado</string>
    <string name="action_settings">Settings</string>
    <string name="action_edit">Edit</string>
    <string name="title_thread_list">Threads</string>
    <string name="title_thread_detail">Thread Detail</string>
    <string name="placeholder_username">User Name</string>
    <string name="placeholder_password">Password</string>
    <string name="placeholder_login">Log In</string>
    <string name="text_login">Log In</string>
    <string name="text_logout">Log Out</string>
    <string name="text_settings">Settings</string>
    <string name="text_signup">Sign Up</string>
    <string name="text_forgot_pswrd">Forgot Password</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="placeholder_email">Email</string>
    <string name="placeholder_full_name">Full Name</string>
    <string name="placeholder_birth_day">Birthday</string>
    <string name="placeholder_phone_number">Phone Number</string>
    <string name="placeholder_sign_up">Sign Up</string>
    <string name="title_activity_messaging">Chat</string>
    <string name="save_txt">Save</string>
    <string name="NO_INTERNET_CONNECTION_ERROR">Unable to connect to Jugaado. Please check your internet connection</string>
    <string name="SHARED_PREFERENCES_KEY">Android_Jugaado_Haha</string>
    <string name="JUGAADO_USER_USERNAME_KEY">JUGAADO_USER_USERNAME</string>
    <string name="JUGAADO_USER_PASSWORD_KEY">JUGAADO_USER_PWD</string>
    <string name="title_activity_base">Base Activity</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_about_us">About Us</string>
    <string name="action_profile">Profile</string>
    <string name="action_back">Back</string>
    <string name="edit">Edit</string>
    <string name="title_activity_category">Category</string>
    <string name="username_txt_forgetpassword">To Retrieve Your Password, Enter Your UserName</string>
    <string name="continue_button">Continue</string>
    <string name="title_activity_forgotPassword">Forgot Password</string>
    <string name="termsncondition_title">Terms &amp; Condition</string>
    <string name="termsncondition_txt">Terms of Services</string>
    <string name="termsncondition_description">Please read the following terms and conditions carefully before registering, accessing, browsing, downloading or using the Site (defined below). By accessing or using the Site or by using the Service (defined below), you agree to be bound by these terms and conditions set forth below including any additional guidelines and future modifications. If at any time you do not agree to these terms and conditions or do not wish to be bound by these terms and conditions, you may not access or use the site and immediately terminate your use of the services.</string>
    <string name="agreement_to_tnc">cscs</string>
    <string name="about_us_text">About Us</string>
    <string name="about_us_desc"></string>
    <string name="serverside_error">Experiencing ServerSide Error, Try after some time</string>
    <string name="forgot_password_response_txt">We have emailed you the Password Reset Details to  your registered Email ID. \n \n PS - If you do not see the email in your inbox, please check your spam folder. Email questions to admin@jugaado.in</string>
    <string name="form_heading">Please Provide the following details</string>
</resources>
