<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.jugaado.jugaado.activities.auth.SignUpActivity"
    android:background="@color/whitesmoke">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_above="@+id/signup_button"
        android:weightSum="1">

        <EditText
            android:id="@+id/signup_name_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/placeholder_full_name"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:layout_marginBottom="10dp"
            android:inputType="textCapWords"
            android:gravity="center"
            android:background="@drawable/lightgreywhite_button_background"
            android:layout_weight="0.05" />

        <EditText
            android:id="@+id/signup_username_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/placeholder_username"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:background="@drawable/lightgreywhite_button_background"
            android:inputType="textNoSuggestions"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:layout_weight="0.05" />

        <EditText
            android:id="@+id/signup_email_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/placeholder_email"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:background="@drawable/lightgreywhite_button_background"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:layout_weight="0.05" />

        <EditText
            android:id="@+id/signup_password_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/placeholder_password"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:background="@drawable/lightgreywhite_button_background"
            android:inputType="textPassword"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:layout_weight="0.06" />


        <LinearLayout
            android:id="@+id/signup_birth_day_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="4dp"
            android:visibility="gone"
            >
            <TextView
                android:id="@+id/signup_birth_day_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Birthday"
                android:textSize="18dp"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:background="@android:color/darker_gray"
                />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/signup_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_sign_up"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="@drawable/lightgreywhite_button_background"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
