<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".activities.ForgetPasswordActivity"
    android:background="@color/whitesmoke">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView"
        android:layout_weight="0.05"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="154dp"
        android:text="@string/username_txt_forgetpassword"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:ems="10"
        android:id="@+id/editText"
        android:textSize="18sp"
        android:layout_below="@+id/textView"
        android:layout_marginTop="43dp"
        android:hint="@string/placeholder_username"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:windowSoftInputMode="adjustPan"
        android:singleLine="true"
        android:gravity="center"
        android:background="@drawable/lightgreywhite_button_background"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continue_button"
        android:id="@+id/button"
        android:background="@drawable/lightgreywhite_button_background"
        android:textColor="@color/black"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true" />
</RelativeLayout>